--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "fetch": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
     "sequelize": "^4.37.6"
